se añadieron campos necesarios para el usuario

--- a/html/añadir.html
+++ b/html/añadir.html
@@ -168,6 +168,14 @@
                     <label>Salario a ganar:</label>
                     <input type="number" placeholder="xxxxx.xx" min="0" step="0.01" required>
                 </div>
+                <div class="field"><label>Rol dentro de la empresa</label>
+                    <select>
+                        <option  disabled selected>Seleccione</option>
+                        <option>Administrador</option>
+                        <option>Empleado</option>
+                    </select>
+                </div>
+                <div class="field"><label>Contraseña de usuario</label><input type="text"></div>
             </div>
         </div>
 
@@ -192,4 +200,4 @@
         }
     </script>
 </body>
-</html>
+</html>s
