Login funcional, conexión con base de datos, sesión y perfil admin completo

--- a/html/perfil_admin.html
+++ b/html/perfil_admin.html
@@ -41,6 +41,10 @@
       <label>Fecha de Ingreso:</label>
       <span id="fecha-ingreso"></span>
     </div>
+    <div class="profile-field">
+      <label>Salario:</label>
+      <span id="Salario"></span>
+    </div>
   </div>
 
   <script>
