--- a/html/perfil_admin.html
+++ b/html/perfil_admin.html
@@ -4,49 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil del Administrador</title>
-  <link rel="stylesheet" href="/css/p_admin.css">
+  <link rel="stylesheet" href="../css/p_admin.css">
 </head>
 <body>
-  <button class="logout-button" onclick="window.location.href='inic_sesion.html'">Cerrar Sesión</button>
-  <div class="button-container">
-    <button onclick="alert('Añadir funcionalidad')">Añadir</button>
-    <button onclick="alert('Eliminar funcionalidad')">Eliminar</button>
-    <button onclick="alert('Visualizar funcionalidad')">Visualizar</button>
-    <button onclick="alert('Editar funcionalidad')">Editar</button>
-  </div>
 
+  <!-- Header con botones de navegación -->
+  <header>
+    <button class="logout-button" onclick="window.location.href='logout.php'">Cerrar Sesión</button>
+    <div class="button-container">
+      <button onclick="window.location.href='añadir.php'">Añadir</button>
+      <button onclick="window.location.href='eliminar.php'">Eliminar</button>
+      <button onclick="window.location.href='visualizar.php'">Visualizar</button>
+      <button onclick="window.location.href='editar.php'">Editar</button>
+    </div>
+  </header>
+
+  <!-- Contenedor del perfil -->
   <div class="profile-container">
     <h2>Perfil del Administrador</h2>
     <div class="profile-field">
       <label>Nombre Completo:</label>
-      <span id="nombre"></span>
+      <span><?php echo $usuario['nombre'] . ' ' . $usuario['apellido']; ?></span>
     </div>
     <div class="profile-field">
       <label>Edad:</label>
-      <span id="edad"></span>
+      <span><?php echo $usuario['edad']; ?> años</span>
     </div>
     <div class="profile-field">
       <label>Sexo:</label>
-      <span id="sexo"></span>
+      <span><?php echo $usuario['sexo']; ?></span>
     </div>
     <div class="profile-field">
       <label>Tipo de Sangre:</label>
-      <span id="tipo-sangre"></span>
+      <span><?php echo $usuario['tipo_sangre']; ?></span>
     </div>
     <div class="profile-field">
       <label>Departamento:</label>
-      <span id="departamento"></span>
+      <span><?php echo $usuario['cod_dep']; ?></span>
     </div>
     <div class="profile-field">
       <label>Fecha de Ingreso:</label>
-      <span id="fecha-ingreso"></span>
+      <span><?php echo $usuario['fecha_ingreso']; ?></span>
     </div>
     <div class="profile-field">
       <label>Salario:</label>
-      <span id="Salario"></span>
+      <span>$<?php echo number_format($usuario['salario'], 2); ?></span>
     </div>
   </div>
 
+  <!-- Footer con derechos reservados -->
+  <footer>
+    <p>&copy; <?php echo date("Y"); ?> Empresas Epsilon. Todos los derechos reservados... O algo asi.</p>
+  </footer>
   <script>
     // Simulación de una solicitud al servidor PHP
     async function cargarDatosEmpleado() {
